2014-09-08  Tim Horton  <timothy_horton@apple.com>

        Try to fix the build after r173383, part 2.

        * wtf/OSObjectPtr.h:

2014-09-08  Tim Horton  <timothy_horton@apple.com>

        Try to fix the build after r173383.

        * wtf/OSObjectPtr.h:

2014-09-07  Sam Weinig  <sam@webkit.org>

        Make OSObjectPtr a bit more like RefPtr
        https://bugs.webkit.org/show_bug.cgi?id=136613

        Reviewed by Darin Adler.

        Address some of Darin's feedback by:
        - Making the adopting constructor private and friending adoptOSObject().
        - Implementing the assignment operator using swap.
        - Adding a move assignment operator.

        * wtf/OSObjectPtr.h:
        (WTF::OSObjectPtr::operator=):
        (WTF::OSObjectPtr::swap):
        (WTF::OSObjectPtr::OSObjectPtr):

2014-09-08  Jessie Berlin  <jberlin@apple.com>

        More build fixes after r173374.

        * wtf/dtoa/strtod.cc:

2014-09-08  Jessie Berlin  <jberlin@apple.com>

        Build fix after r173374.

        * wtf/dtoa/strtod.cc:

2014-09-08  Jessie Berlin  <jberlin@apple.com>

        Speculative build fix after r173364.

        * wtf/dtoa/strtod.cc:

2014-09-07  Maciej Stachowiak  <mjs@apple.com>

        Introduce COMPILER_QUIRK(CONSIDERS_UNREACHABLE_CODE) and use it
        https://bugs.webkit.org/show_bug.cgi?id=136616

        Reviewed by Darin Adler.

        * wtf/Compiler.h: Define the quirk for all compilers but clang.

2014-09-06  Sam Weinig  <sam@webkit.org>

        XPCPtr should be converted into an all purpose smart pointer for os_objects
        https://bugs.webkit.org/show_bug.cgi?id=136602

        Reviewed by Darin Adler.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/OSObjectPtr.h: Copied from Source/WebKit2/Platform/IPC/mac/XPCPtr.h.
        (WTF::retainOSObject):
        (WTF::releaseOSObject):
        (WTF::OSObjectPtr::OSObjectPtr):
        (WTF::OSObjectPtr::~OSObjectPtr):
        (WTF::OSObjectPtr::operator=):