@@ -1003,6 +1003,12 @@
 #endif
 #endif
 
+#ifndef HAVE_VOUCHERS
+#if PLATFORM(IOS) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000)
+#define HAVE_VOUCHERS 1
+#endif
+#endif
+
 #define WTF_USE_GRAMMAR_CHECKING 1
 
 #if PLATFORM(COCOA) || PLATFORM(EFL)
